# schemeweaver

./: .env.example  .gitignore  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: diagram-self.yml
apis/server/: pyproject.toml
apis/server/schemeweaver_server/: config.py  main.py
apis/server/schemeweaver_server/routes/: generate.py  health.py  library.py  repos.py  systems.py
apis/server/scripts/: test_generate.py
apps/cli/: Cargo.toml
apps/cli/src/: client.rs  main.rs  output.rs
apps/cli/src/commands/: generate.rs  update.rs
apps/web/: nuxt.config.ts  package.json  tailwind.config.ts
apps/web/assets/css/: main.css
apps/web/components/: AppShell.vue  ComplexityFilter.vue  ContextMenu.vue  DiagramCanvas.vue  DiagramLibrary.vue  EmptyState.vue  ExportBar.vue  IssuesBanner.vue  ModelSelector.vue  NewViewDialog.vue  OntologyPanel.vue  PromptBar.vue  ProseEditor.vue  RepoImportDialog.vue  ShapePanel.vue  SyncBar.vue  ViewBar.vue  WorkspaceLayout.vue
apps/web/components/nodes/: BaseNode.vue
apps/web/composables/: useDiagram.ts  useExport.ts  useFlowGraph.ts  useLayout.ts  useLibrary.ts  useSystem.ts  useTool.ts  useWorkspace.ts
apps/web/pages/: index.vue
apps/web/plugins/: vue-flow.client.ts
apps/web/types/: dir.ts  system.ts
apps/web/utils/: iconRegistry.ts  layout.ts  nodeShapes.ts
config/: models.json
docs/diagrams/schemeweaver-architecture/: diagram.dir.json  diagram.mmd  error.txt  summary.json
jobs/worker/: pyproject.toml
jobs/worker/schemeweaver_worker/: config.py  tasks.py  worker.py
libs/core/: pyproject.toml
libs/core/schemeweaver_core/: __init__.py  layout.py  ontology_to_dir.py  pipeline.py  renderer.py  repo_analyzer.py  system_pipeline.py
libs/core/schemeweaver_core/exporters/: __init__.py  mermaid.py
libs/core/schemeweaver_core/models/: __init__.py  api.py  dir.py  system.py
libs/core/schemeweaver_core/providers/: __init__.py  anthropic.py  base.py  factory.py  openai_compat.py
libs/core/tests/: test_pipeline.py  test_renderer.py
libs/svgkit/: pyproject.toml
libs/svgkit/schemeweaver_svgkit/: __init__.py  ids.py  postprocess.py
schema/: dir.schema.json
scripts/: migrate_node_types.py
