[project]
name = "schemeweaver-server"
version = "0.1.0"
description = "Scheme Weaver FastAPI server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "schemeweaver-core",
    "schemeweaver-svgkit",
    "arq>=0.26",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemeweaver_server"]

[tool.uv.sources]
schemeweaver-core = { workspace = true }
schemeweaver-svgkit = { workspace = true }
