[project]
name = "schemeweaver-worker"
version = "0.1.0"
description = "Scheme Weaver ARQ async worker for diagram generation jobs"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26",
    "schemeweaver-core",
    "schemeweaver-svgkit",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemeweaver_worker"]

[tool.uv.sources]
schemeweaver-core = { workspace = true }
schemeweaver-svgkit = { workspace = true }
