[project]
name = "schemeweaver-svgkit"
version = "0.1.0"
description = "SVG post-processing, accessibility validation, and semantic ID utilities"
requires-python = ">=3.12"
dependencies = [
    "scour>=0.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemeweaver_svgkit"]
